@@ -5,10 +5,10 @@
   <!ENTITY manrevision "2.8">
   <!ENTITY date "August 2004">
   <!ENTITY applet "Window List">
-
 ]>
 
 <article id="index" lang="en">
+<title>Problem showing document</title>
 
   <articleinfo> 
 	 <publisher role="author"> 
@@ -39,6 +39,9 @@
 <remark>This file has been created when we migrated the window list docs to the User Guide in March 2007.</remark>
 <remark>One day we should remove it completely, say in a couple of release cyles.</remark>
 
+<sect1>
+
+	<title>Problem showing document</title>
 	<anchor id="windowlist-applet-fig"/>
 	<anchor id="windowlist-introduction-add"/>
 	<anchor id="window-groups"/>
@@ -47,8 +50,6 @@
 	<anchor id="windowlist-prefs"/>
 	<anchor id="windowlist-prefs-behavior"/>
 	<anchor id="windowlist-prefs-size"/>
-
-	<title>Problem showing document</title>
 	
 	<para>
 		This document is depreciated, please consult the 
@@ -65,5 +66,6 @@
 		Select the general component of gnome-user-docs and be sure to indicate
 		how you came upon this depreciated document.
 	</para>
+</sect1>
 
 </article> 
