@@ -6,10 +6,10 @@
   <!ENTITY manrevision "2.6">
   <!ENTITY date "August 2004">
   <!ENTITY applet "Workspace Switcher">
-
 ]>
 
 <article id="index" lang="en">
+<title>Problem showing document</title>
 
   <articleinfo> 
 	 <publisher role="author"> 
@@ -40,14 +40,15 @@
 <remark>This file has been created when we migrated the workspace docs to the User Guide in March 2007.</remark>
 <remark>One day we should remove it completely, say in a couple of release cyles.</remark>
 
+<sect1>
+
+	<title>Problem showing document</title>
 	<anchor id="workspacelist-introduction"/>
 	<anchor id="workspacelist-fig"/>
 	<anchor id="workspacelist-introduction-add"/>
 	<anchor id="workspacelist-usage"/>
 	<anchor id="workspacelist-move-window"/>
 	<anchor id="workspacelist-prefs"/>
-
-	<title>Problem showing document</title>
 	
 	<para>
 		This document is depreciated, please consult the 
@@ -64,5 +65,6 @@
 		Select the general component of gnome-user-docs and be sure to indicate
 		how you came upon this depreciated document.
 	</para>
+</sect1>
 
 </article> 
