@@ -1,6 +1,11 @@
 2007-05-15  Vincent Untz  <vuntz@gnome.org>
 
 	* window-list/C/window-list.xml:
+	* workspace-switcher/C/workspace-switcher.xml: fix distcheck
+
+2007-05-15  Vincent Untz  <vuntz@gnome.org>
+
+	* window-list/C/window-list.xml:
 	* window-list/Makefile.am:
 	* workspace-switcher/C/workspace-switcher.xml:
 	* workspace-switcher/Makefile.am: fix compilation
